[package]
name = "diffops"
version = "0.1.0"
authors = ["Selçuk Öztürk <selcukahmed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
